Fix leaderboard UI issues (#451)
* Move report button to bottom left

* Load JS/modal everywhere and update walkthrough button

* Fix leaderboard height relative to sidebar and sidebar button overflow

* Fix margin of the tutorial-button container

* Grey out system info box

* grey out system info box

* Remove walkthrough button test

* Fix container overflow, sidebar conflicts, container scrolling, and slider cutoffs

* Remove has_user from nav bar report issue

* Reintroduce text - accidental removal

--- a/static/benchmarks/css/components/left-sidebar.sass
+++ b/static/benchmarks/css/components/left-sidebar.sass
@@ -170,3 +170,39 @@
 // Show nested dropdown on hover
 .left-sidebar .nested-dropdown:hover .nested-dropdown-content
   display: block
+
+// Report Issue text
+// Button has conflicts with _button sass styling
+#reportIssueText
+  position: absolute
+  bottom: 20px
+  left: 20px
+  color: #ccc
+  font-size: 14px
+  cursor: pointer
+  
+  i
+    display: none
+    
+  span
+    display: inline
+
+// Collapsed state
+.left-sidebar.collapsed #reportIssueText
+  left: 30px
+  
+  span
+    display: none
+    
+  i
+    display: inline
+
+@media (max-width: 1024px)
+  #reportIssueText
+    left: 30px
+    
+    span
+      display: none
+      
+    i
+      display: inline
